Pin configuration notary wave work
